Fix fieldset-group on mobile

--- a/cla_public/static-src/stylesheets/forms/_fieldset.scss
+++ b/cla_public/static-src/stylesheets/forms/_fieldset.scss
@@ -10,6 +10,14 @@ fieldset {
     border: 1px solid $grey-3;
     padding: 10px 20px;
     margin: 25px -20px;
+
+    @include media(mobile) {
+      border-left: 0;
+      border-right: 0;
+      margin-left: -15px;
+      margin-right: -15px;
+      padding: 5px 15px;
+    }
   }
 
   .fieldset-label {
